--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
 
+<!-- Start über Komandozeile:  mvn spring-boot:run -->
 
 <!-- Link: https://www.youtube.com/watch?v=9cKsq14Kfsw -->
 
@@ -29,7 +30,6 @@
 </head>
 
 <body>
-	asdfasdf
 	<!--  Navigation -->
 
 	<nav class="navbar navbar-expand-md navbar-ligth bg-light stricky-top">
@@ -64,7 +64,7 @@
 		</ul>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="img/background.jpg">
+				<img src="img/background.png">
 				<div class="carousel-caption">
 					<h1 class="display-2">Bootstrap</h1>
 					<h3>Complete Website Layout</h3>
@@ -75,10 +75,10 @@
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="im/background2.jpg">
+				<img src="img/background2.png">
 			</div>
 			<div class="carousel-item">
-				<img src="im/background3.jpg">
+				<img src="img/background3.png">
 			</div>
 
 		</div>
@@ -221,7 +221,7 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="img/gif/chicken.gif">
-				</div>
+				</div>2e790726-9127-4a6b-a183-c4ef461d0d71
 			
 			</div>
 		</div>
@@ -370,27 +370,7 @@
 	</footer>
 
 
-
-
-	<header>XXX</header>
-
-
-	<main>
-
-		<h3>Users list (Admin page only)</h3>
-
-
-		<a>Hallo Martin-INDEX</a> <a href="/index"
-			class="btn btn-outline-primary" role="button" aria-pressed="true">To
-			index-page</a>
-
-	</main>
-
-
-	<footer> xxxx </footer>
 </body>
-
-
 
 
 
