--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,20 +13,15 @@
 <head>
 <title>MartinsBookStore</title>
 <meta charset="utf-8">
-<link rel="stylesheet"
-	href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="/style.css">
-<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-	integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-	crossorigin="anonymous"></script>
-<script
-	src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-	integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-	crossorigin="anonymous"></script>
-<script
-	src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-	integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-	crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
+<!-- <link href="style.css" rel="stylesheet">  -->
 </head>
 
 <body>
@@ -36,20 +31,17 @@
 		<div class="container-fluid">
 			<a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse"
-				data-target="#navbarResponsiv">
+				data-target="#navbarResponsive">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 
-					<li class="nav-item active"><a class="nav-link" href="#">Home</a>
-					</li>
+					<li class="nav-item active"><a class="nav-link" href="#">Home</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">About</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Services</a>
-					</li>
+					<li class="nav-item"><a class="nav-link" href="#">Services</a></li>
 					<li class="nav-item"><a class="nav-link" href="#">Team</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Connect</a>
-					</li>
+					<li class="nav-item"><a class="nav-link" href="#">Connect</a></li>
 				</ul>
 			</div>
 		</div>
@@ -86,7 +78,7 @@
 	</div>
 
 
-	</div>
+
 
 
 
@@ -125,8 +117,8 @@
 			<div class="col-12">
 				<p class="lead">Welcome to my Bootstrap 4 website tutorial!
 					Bootstrap is a free and open-source front-end library with HTML and
-					CSS based designs.
-				</h1>
+					CSS based designs.</p>
+
 			</div>
 
 		</div>
@@ -158,9 +150,9 @@
 				<p>Built with the latest version of Bootstrap, Bootstrap 4.</p>
 			</div>
 
-			<div class="col-xs-12 col-md-4">
+			<div class="col-sm-12 col-md-4">
 				<i class="fab fa-css3"></i>
-				<h3>BOOTSTRAP</h3>
+				<h3>CSS3</h3>
 				<p>Built with the latest version of CSS, CSS3.</p>
 			</div>
 
@@ -183,11 +175,10 @@
 					than 576px wide.</p>
 				<p>It can also display the web page differently depending on the
 					screen size or viewing device.</p>
-				<br> <a href="#" class="btn btn-primary">Learn More</a>
-
+				<br>
+				<a href="#" class="btn btn-primary">Learn More</a>
 			</div>
-			<div class="col-lg-6">
-				<img src="img/desk.png" class="img-fluid">
+			<div class="col-lg-6"><img src="img/desk.png" class="img-fluid">
 			</div>
 
 		</div>
@@ -206,7 +197,8 @@
 
 
 	<!--  Emoji Section -->
-	<button class="fun" data-toggle="collapse" data-target="#emoji">Click for fun</button>
+	<button class="fun" data-toggle="collapse" data-target="#emoji">Click
+		for fun</button>
 	<div id="emoji" class="collaps">
 		<div class="container-fluid padding">
 			<div class="row text-center">
@@ -221,11 +213,11 @@
 				</div>
 				<div class="col-sm-6 col-md-3">
 					<img class="gif" src="img/gif/chicken.gif">
-				</div>2e790726-9127-4a6b-a183-c4ef461d0d71
-			
+				</div>
+
 			</div>
 		</div>
-	
+
 	</div>
 
 	<!--  Meet the team -->
@@ -235,8 +227,8 @@
 				<h1 class="display-4">Meet the Team</h1>
 			</div>
 			<hr>
-		</div>	
-	
+		</div>
+
 	</div>
 
 
@@ -248,23 +240,23 @@
 					<img class="card-img-top" src="img/team1.png">
 					<div class="card-body">
 						<h4 class="card-title">John Doe</h4>
-						<p class="card-text">John is an Internet entrepreneur with 
-						almost 20 years of experience.</p>
+						<p class="card-text">John is an Internet entrepreneur with
+							almost 20 years of experience.</p>
 						<a href="#" class="btn btn-outline-secondary">See Profile</a>
 					</div>
-					
+
 				</div>
 			</div>
-		<div class="col-md-4">
+			<div class="col-md-4">
 				<div class="card">
 					<img class="card-img-top" src="img/team2.png">
 					<div class="card-body">
 						<h4 class="card-title">Mary Jo</h4>
 						<p class="card-text">Mary is a designer with almost 10 years
-						of digital design experience.</p>
+							of digital design experience.</p>
 						<a href="#" class="btn btn-outline-secondary">See Profile</a>
 					</div>
-					
+
 				</div>
 			</div>
 			<div class="col-md-4">
@@ -272,17 +264,17 @@
 					<img class="card-img-top" src="img/team3.png">
 					<div class="card-body">
 						<h4 class="card-title">Phil Ho</h4>
-						<p class="card-text">Phil is a developer with over 5 years of web
-						development experience.</p>
+						<p class="card-text">Phil is a developer with over 5 years of
+							web development experience.</p>
 						<a href="#" class="btn btn-outline-secondary">See Profile</a>
 					</div>
-					
+
 				</div>
 			</div>
-		
+
 		</div>
-	
-	
+
+
 	</div>
 
 
@@ -291,13 +283,13 @@
 		<div class="row padding">
 			<div class="col-lg-6">
 				<h2>Our Philosophy</h2>
-				<p>Bla, bla, .............The collums will automatically stack on top of each other
-					when the screen is less than 576px wide.</p>
+				<p>Bla, bla, .............The collums will automatically stack
+					on top of each other when the screen is less than 576px wide.</p>
 				<p>Text 2b: The collums will automatically stack on top of each
 					other when the screen is less than 576px wide. The collums will
 					automatically stack on top of each other when the screen is less
-					than 576px wide. Lorem lorem ipsum xxxxxxxxxx xxxxxxxxxxxx xxxxxxxxxx xxxxxxxxas asdfas
-					asdfasdf asdfasdf asdfasdf</p>
+					than 576px wide. Lorem lorem ipsum xxxxxxxxxx xxxxxxxxxxxx
+					xxxxxxxxxx xxxxxxxxas asdfas asdfasdf asdfasdf asdfasdf</p>
 				<br>
 			</div>
 			<div class="col-lg-6">
@@ -323,50 +315,50 @@
 				<a href="#"><i class="fab fa-instagram"></i></a>
 				<a href="#"><i class="fab fa-youtube"></i></a>
 			</div>
-		
+
 		</div>
-		
+
 	</div>
 
 
 	<!--  Footer -->
 	<footer>
 		<div class="container-fluid padding">
-		<div class="row text-center">
-			<div class="col-md-4">
-				<img src="img/w3newbie.png">
-				<hr class="light">
-				<p>555-555-5555</p>
-				<p>email@myemail.de</p>
-				<p>100 Street Name</p>
-				<p>00000 City</p>	
-			</div>
-			<div class="col-md-4">
-				<hr class="light">
-				<h5>Our hours</h5>
-				<hr class="light">
-				<p>Monday: 9am - 5pm </p>
-				<p>Saturday: 10am - 4pm </p>
-				<p>Sunday: closed </p>
-			</div>
-			<div class="col-md-4">
-				<hr class="light">
-				<h5>Service Area</h5>
-				<hr class="light">
-				<p>00000 City</p>
-				<p>00000 City</p>
-				<p>00000 City</p>
-				<p>00000 City</p>
-			</div>
-			<div class="col-12">
-				<hr class="light-100">
-				<h5>&copy; w3newbie.com</h5>
+			<div class="row text-center">
+				<div class="col-md-4">
+					<img src="img/w3newbie.png">
+					<hr class="light">
+					<p>555-555-5555</p>
+					<p>email@myemail.de</p>
+					<p>100 Street Name</p>
+					<p>00000 City</p>
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Our hours</h5>
+					<hr class="light">
+					<p>Monday: 9am - 5pm</p>
+					<p>Saturday: 10am - 4pm</p>
+					<p>Sunday: closed</p>
+				</div>
+				<div class="col-md-4">
+					<hr class="light">
+					<h5>Service Area</h5>
+					<hr class="light">
+					<p>00000 City</p>
+					<p>00000 City</p>
+					<p>00000 City</p>
+					<p>00000 City</p>
+				</div>
+				<div class="col-12">
+					<hr class="light-100">
+					<h5>&copy; w3newbie.com</h5>
+				</div>
 			</div>
 		</div>
-		</div>
-	
-	
-	
+
+
+
 	</footer>
 
 
