--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,15 +1,16 @@
 
-/* Martin's Übungen' */
+/* =====>>   Martin's Übungen   <<<=====  */
 
-/* ==> css_selectors !!!
+/* 
+=====> css_selectors !!!
 =====> cssref/css_selectors
 
-==> background-size 
 
-==> flexbox guide
+=====> background-size 
+=====> flexbox guide
 
-
-
+****************************************************************
+****************************************************************
 
 
 .bar {
@@ -21,10 +22,14 @@
 	--> id ansprechen (ist eindeutig pro HTML-Datei)
 }
 
+****************************************************************
 main {
 	--> main wird angesprochen
 }
-================================================================================================>>>STADRT<<<<<<<<<<<<<<<<<
+****************************************************************
+****************************************************************
+************************************************************************************************************************************************
+
 */
 
 @import url('https://fonts.googleapis.com/css?family=Poppins:400,500,700');
@@ -131,7 +136,7 @@ html, body {
 }
 
 .gif {
-	max-with: 100%;
+	max-width: 100%;
 }
 
 /* social-MEDIA section ... */
@@ -267,9 +272,6 @@ hr.light-100 {
 
 
 
-
-
-
 /* =======================================================================================================*/
 /*---Firefox Bug Fix --*/
 
@@ -280,13 +282,18 @@ hr.light-100 {
 	-webkit-backface-visibility: visible;
 	backface-visibility: visible;
 }
-/*--- Fixed Backgroud Image --*/
+/*--- Fixed Background Image --*/
 figure {
 	position: relative;
 	width: 100%;
 	height: 60%;
-	margin: 0!important;
+	margin: 0;
 }
+
+/* alt --> margin: 0!important; */
+
+/* To fix the Scrolling image not appearing i did the following in the css file: Removed the #fixed-wrap {...} part ...
+
 .fixed-wrap {
 	clip: rect(0, auto, auto, 0);
 	position: absolute;
@@ -295,6 +302,21 @@ figure {
 	width: 100%;
 	height: 100%;
 }
+*/
+
+
+
+#fixed {
+	background-image: url('img/mac.png');
+	height: 600px;
+ 	background-repeat: no-repeat;
+ 	background-attachment: fixed;
+ 	background-position: center;
+ 	background-size: cover;
+}
+
+
+/* alt
 #fixed {
 	background-image: url('img/mac.png');
 	position: fixed;
@@ -309,12 +331,16 @@ figure {
 	        transform: translateZ(0);
 	        will-change: transform;
 }
+
+*/
+
+
+
+
 /*--- Bootstrap Padding Fix --*/
 [class*="col-"] {
 	padding: 1rem;
 }
-
-
 
 
 
@@ -327,30 +353,6 @@ lg - min-width: 992px
 xl - min-width: 1200px
 
 */
-
-
-
-
-
-
-
-
-
-
-/*
-
-html {
-	height: 100%;
-}
-
-body {
-  height: 100%;
-  display:grid;
-  grid-template-rows: auto 1fr auto;
-}
-
-*/
-
 
 
 
